include/colyseus/predict/reconciler.h


typedef struct colyseus_reconciler colyseus_reconciler_t;
typedef struct colyseus_step_ctx {
    double dt;        
    double dt_ms;     
    int tick;         
    int sub_steps;    
    double sub_dt;    
    double sub_dt_ms; 
    bool is_replay;
    double reckon_time;
    bool lag_comp_active;
    void* _memo_backing;
} colyseus_step_ctx_t;
double colyseus_step_memo(const colyseus_step_ctx_t* ctx, const char* key,
    double (*compute)(void* userdata), void* userdata);
int colyseus_step_memo_vec(const colyseus_step_ctx_t* ctx, const char* key,
    int (*compute)(double* out, void* userdata), void* userdata, double* out);
typedef void (*colyseus_reconciler_step_fn)(
    const colyseus_step_ctx_t* ctx, colyseus_schema_t* state,
    const colyseus_schema_t* command, void* userdata);
typedef struct {
    double smooth_ms;
    double snap;
    double step_ms;
    double step_seconds;
    int sub_steps;
    const char* const* fields;
    int field_count;
    void (*on_reconcile)(int acked, void* userdata);
    bool manual_step;
    void* userdata; 
} colyseus_reconciler_options_t;
colyseus_reconciler_t* colyseus_reconciler_create(
    colyseus_schema_t* truth,
    const colyseus_schema_vtable_t* vtable,
    colyseus_input_handle_t* input,
    colyseus_room_clock_t* clock,          
    colyseus_reconciler_step_fn step,
    const colyseus_reconciler_options_t* options);