include/colyseus/predict/predict.h


typedef struct colyseus_predict colyseus_predict_t;
typedef enum {
    COLYSEUS_PREDICT_LERP,
    COLYSEUS_PREDICT_EXTRAPOLATE,
    COLYSEUS_PREDICT_DAMPED,
    COLYSEUS_PREDICT_RECKON,
    COLYSEUS_PREDICT_RAW,
} colyseus_predict_mode_t;
typedef struct {
    colyseus_predict_mode_t mode;
    double delay;            
    double damping;          
    double max_extrapolate;  
    double tick_interval;    
    double snap;             
    bool angle;              
} colyseus_predict_field_options_t;
typedef void (*colyseus_predict_step_fn)(
    colyseus_schema_t* state, double dt, double elapsed_ms, void* userdata);
void colyseus_predict_free(colyseus_predict_t* p);
typedef struct {
    const char* field;
    const colyseus_predict_field_options_t* opts;
} colyseus_attach_field_t;
int colyseus_predict_attach(
    colyseus_predict_t* p,
    colyseus_schema_t* instance,
    const colyseus_attach_field_t* config, int count);
int colyseus_predict_track(
    colyseus_predict_t* p,
    colyseus_schema_t* instance,
    const char* field,
    const colyseus_predict_field_options_t* options);
int colyseus_predict_attach_reckon(
    colyseus_predict_t* p,
    colyseus_schema_t* instance,
    const colyseus_schema_vtable_t* vtable,
    const char* const* fields, int field_count,
    colyseus_predict_step_fn step,
    double smoothing, double substep_ms, double snap,
    void* userdata);
void colyseus_predict_detach(colyseus_predict_t* p, colyseus_schema_t* instance);
int colyseus_predict_attach_all(
    colyseus_predict_t* p,
    colyseus_schema_t* state,
    const char* collection,
    const colyseus_attach_field_t* config, int count,
    const char* except_key,
    const colyseus_predict_field_options_t* fallback);
colyseus_reconciler_t* colyseus_predict_reconciler(
    colyseus_predict_t* p,
    colyseus_schema_t* truth,
    const colyseus_schema_vtable_t* vtable,
    colyseus_input_handle_t* input,
    colyseus_reconciler_step_fn step,
    const colyseus_reconciler_options_t* options);
int colyseus_predict_attach_all_reckon(
    colyseus_predict_t* p,
    colyseus_schema_t* state,
    const char* collection,
    const colyseus_schema_vtable_t* entry_vtable,
    const char* const* fields, int field_count,
    colyseus_predict_step_fn step,
    double smoothing, double substep_ms, double snap,
    void* userdata);
colyseus_callbacks_t* colyseus_predict_callbacks(colyseus_predict_t* p);
typedef struct {
    const colyseus_schema_vtable_t* entry_vtable;
    const char* const* fields;
    int field_count;
    colyseus_predict_step_fn step;
    double smoothing;
    double substep_ms;              
    void* userdata;
} colyseus_spawns_reckon_t;
void colyseus_predict_bind_spawns(colyseus_predict_t* p, colyseus_spawns_t* spawns,
    colyseus_schema_t* state, const char* collection,
    const colyseus_spawns_reckon_t* reckon);