include/colyseus/predict/spawns.h


typedef struct colyseus_spawns colyseus_spawns_t;
void colyseus_spawns_bind_reader(colyseus_spawns_t* spawns,
    double (*read)(colyseus_schema_t* server, const char* field, void* userdata),
    void* userdata);