platforms/flutter/colyseus_flutter/lib/src/bindings/colyseus_core.dart


  late final _colyseus_predict_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<colyseus_predict_t>)>>(
      'colyseus_predict_free');
  late final _colyseus_predict_free = _colyseus_predict_freePtr
      .asFunction<void Function(ffi.Pointer<colyseus_predict_t>)>();

  int colyseus_predict_attach(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> instance,
    ffi.Pointer<colyseus_attach_field_t> config,
    int count,
  ) {
    return _colyseus_predict_attach(
      p,
      instance,
      config,
      count,
    );
  }

  late final _colyseus_predict_attachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<colyseus_attach_field_t>,
              ffi.Int)>>('colyseus_predict_attach');
  late final _colyseus_predict_attach = _colyseus_predict_attachPtr.asFunction<
      int Function(
          ffi.Pointer<colyseus_predict_t>,
          ffi.Pointer<colyseus_schema_t>,
          ffi.Pointer<colyseus_attach_field_t>,
          int)>();

  int colyseus_predict_track(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> instance,
    ffi.Pointer<ffi.Char> field,
    ffi.Pointer<colyseus_predict_field_options_t> options,
  ) {
    return _colyseus_predict_track(
      p,
      instance,
      field,
      options,
    );
  }

  late final _colyseus_predict_trackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<colyseus_predict_t>,
                  ffi.Pointer<colyseus_schema_t>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<colyseus_predict_field_options_t>)>>(
      'colyseus_predict_track');
  late final _colyseus_predict_track = _colyseus_predict_trackPtr.asFunction<
      int Function(
          ffi.Pointer<colyseus_predict_t>,
          ffi.Pointer<colyseus_schema_t>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<colyseus_predict_field_options_t>)>();

  int colyseus_predict_attach_reckon(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> instance,
    ffi.Pointer<colyseus_schema_vtable_t1> vtable,
    ffi.Pointer<ffi.Pointer<ffi.Char>> fields,
    int field_count,
    colyseus_predict_step_fn step,
    double smoothing,
    double substep_ms,
    double snap,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _colyseus_predict_attach_reckon(
      p,
      instance,
      vtable,
      fields,
      field_count,
      step,
      smoothing,
      substep_ms,
      snap,
      userdata,
    );
  }

  late final _colyseus_predict_attach_reckonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<colyseus_schema_vtable_t1>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Int,
              colyseus_predict_step_fn,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Void>)>>('colyseus_predict_attach_reckon');
  late final _colyseus_predict_attach_reckon =
      _colyseus_predict_attach_reckonPtr.asFunction<
          int Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<colyseus_schema_vtable_t1>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              colyseus_predict_step_fn,
              double,
              double,
              double,
              ffi.Pointer<ffi.Void>)>();

  void colyseus_predict_detach(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> instance,
  ) {
    return _colyseus_predict_detach(
      p,
      instance,
    );
  }

  late final _colyseus_predict_detachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>)>>('colyseus_predict_detach');
  late final _colyseus_predict_detach = _colyseus_predict_detachPtr.asFunction<
      void Function(
          ffi.Pointer<colyseus_predict_t>, ffi.Pointer<colyseus_schema_t>)>();

  /// Track EVERY entry of a collection — the ones present now and the ones that
  /// arrive later — and stop tracking them as they are removed. This is the
  /// common case: remote entities you smooth but do not control.
  ///
  /// Takes the same per-field config as colyseus_predict_attach. `config` NULL
  /// tracks every numeric field of each entry with `fallback` (itself NULL =
  /// lerp defaults). `except_key` skips one entry by map key (your own session
  /// id); NULL tracks all. Returns 0 on success.
  int colyseus_predict_attach_all(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> state,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<colyseus_attach_field_t> config,
    int count,
    ffi.Pointer<ffi.Char> except_key,
    ffi.Pointer<colyseus_predict_field_options_t> fallback,
  ) {
    return _colyseus_predict_attach_all(
      p,
      state,
      collection,
      config,
      count,
      except_key,
      fallback,
    );
  }

  late final _colyseus_predict_attach_allPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<colyseus_predict_t>,
                  ffi.Pointer<colyseus_schema_t>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<colyseus_attach_field_t>,
                  ffi.Int,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<colyseus_predict_field_options_t>)>>(
      'colyseus_predict_attach_all');
  late final _colyseus_predict_attach_all =
      _colyseus_predict_attach_allPtr.asFunction<
          int Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<colyseus_attach_field_t>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<colyseus_predict_field_options_t>)>();

  /// Create a reconciler driven by this Predict, and bind the input handle's
  /// lag-comp render delay to this Predict's lerp delay (so the server rewinds
  /// to the instant this client actually displayed). Prefer this over
  /// colyseus_reconciler_create().
  ffi.Pointer<colyseus_reconciler_t> colyseus_predict_reconciler(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> truth,
    ffi.Pointer<colyseus_schema_vtable_t1> vtable,
    ffi.Pointer<colyseus_input_handle_t> input,
    colyseus_reconciler_step_fn step,
    ffi.Pointer<colyseus_reconciler_options_t> options,
  ) {
    return _colyseus_predict_reconciler(
      p,
      truth,
      vtable,
      input,
      step,
      options,
    );
  }

  late final _colyseus_predict_reconcilerPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_reconciler_t> Function(
                  ffi.Pointer<colyseus_predict_t>,
                  ffi.Pointer<colyseus_schema_t>,
                  ffi.Pointer<colyseus_schema_vtable_t1>,
                  ffi.Pointer<colyseus_input_handle_t>,
                  colyseus_reconciler_step_fn,
                  ffi.Pointer<colyseus_reconciler_options_t>)>>(
      'colyseus_predict_reconciler');
  late final _colyseus_predict_reconciler =
      _colyseus_predict_reconcilerPtr.asFunction<
          ffi.Pointer<colyseus_reconciler_t> Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<colyseus_schema_vtable_t1>,
              ffi.Pointer<colyseus_input_handle_t>,
              colyseus_reconciler_step_fn,
              ffi.Pointer<colyseus_reconciler_options_t>)>();

  /// Like colyseus_predict_attach_all, but DEAD-RECKONS every entry through a step
  /// function shared with the server (the bot patterns in a lab, an NPC's mover)
  /// instead of smoothing samples. `entry_vtable` may be NULL: each entry then
  /// reckons with its own vtable, which is the only option for dynamic
  /// (reflection / GDScript) schemas.
  int colyseus_predict_attach_all_reckon(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> state,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<colyseus_schema_vtable_t1> entry_vtable,
    ffi.Pointer<ffi.Pointer<ffi.Char>> fields,
    int field_count,
    colyseus_predict_step_fn step,
    double smoothing,
    double substep_ms,
    double snap,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _colyseus_predict_attach_all_reckon(
      p,
      state,
      collection,
      entry_vtable,
      fields,
      field_count,
      step,
      smoothing,
      substep_ms,
      snap,
      userdata,
    );
  }

  late final _colyseus_predict_attach_all_reckonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<colyseus_schema_vtable_t1>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Int,
              colyseus_predict_step_fn,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Void>)>>('colyseus_predict_attach_all_reckon');
  late final _colyseus_predict_attach_all_reckon =
      _colyseus_predict_attach_all_reckonPtr.asFunction<
          int Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<colyseus_schema_vtable_t1>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              colyseus_predict_step_fn,
              double,
              double,
              double,
              ffi.Pointer<ffi.Void>)>();

  /// The callbacks layer this Predict uses. It belongs to the ROOM and outlives
  /// this Predict, so anything you register on it directly you must also remove
  /// yourself — prefer the attach_* helpers above, which are torn down with the
  /// Predict.
  ffi.Pointer<colyseus_callbacks_t> colyseus_predict_callbacks(
    ffi.Pointer<colyseus_predict_t> p,
  ) {
    return _colyseus_predict_callbacks(
      p,
    );
  }

  late final _colyseus_predict_callbacksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_callbacks_t> Function(
              ffi.Pointer<colyseus_predict_t>)>>('colyseus_predict_callbacks');
  late final _colyseus_predict_callbacks =
      _colyseus_predict_callbacksPtr.asFunction<
          ffi.Pointer<colyseus_callbacks_t> Function(
              ffi.Pointer<colyseus_predict_t>)>();

  /// Route a collection's adds/removes into a spawn store AND drive the store
  /// from tick(). This is the whole wiring a predicted-spawn collection needs.
  ///
  /// `reckon` is optional (NULL = confirmed entities read raw, un-reckoned).
  void colyseus_predict_bind_spawns(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<colyseus_schema_t> state,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<colyseus_spawns_reckon_t> reckon,
  ) {
    return _colyseus_predict_bind_spawns(
      p,
      spawns,
      state,
      collection,
      reckon,
    );
  }
